# pmtools

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PRD.md  README.md  chrome.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
app/: CLAUDE.md  main.py
app/api/: analyze.py  validate.py
app/core/: config.py
app/llm/: anthropic_client.py  base.py  gemini.py  manager.py  prompts.py
app/models/: requests.py  responses.py
app/statistics/: calculations.py
chrome-extension/: CLAUDE.md  MCP_TOOLS_AVAILABLE.md  README.md  manifest.json
chrome-extension-standalone/: CLAUDE.md  IMPLEMENTATION_V2.md  README.md  background.js  llm-client.js  llm-schemas.js  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js  publish.md  shared.js  statistics.js  support.html  test-calculations-updated.html  test-calculations.html  test-gemini-api.html  test-llm-flow.html  test-markdown.html  test-model-selection.html  test-structured-output.html
chrome-extension-standalone/background/: service-worker.js
chrome-extension-standalone/options/: options.css  options.html  options.js
chrome-extension-standalone/popup/: popup.css  popup.html  popup.js
chrome-extension-standalone/shared/: constants.js  llm-client.js  statistics.js  utils.js
chrome-extension/background/: service-worker.js
chrome-extension/options/: options.css  options.html  options.js
chrome-extension/popup/: popup.css  popup.html  popup.js
streamlit_app/: CLAUDE.md  main.py
tests/: CLAUDE.md  test_api.py  test_statistics.py
(+8 files in other folders)
